updated html and css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <html>
-<h1>Hello World</h1> 
+	<head>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link href='http://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'> 
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	</head>
+		<header> <h1>Justina Eng</h1> 
+			<p><a href="Eng_Resume.pdf">Resume</a> | <a href="mailto:justina.eng@gmail.com">E-mail</a></p>
+		</header>
 </html>
