--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Justina Eng's Portfolio</title>
+
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link href='http://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'> 
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	</head>
+
 		<header> <h1>Justina Eng</h1> 
-			<p><a href="Eng_Resume.pdf">Resume</a> | <a href="mailto:justina.eng@gmail.com">E-mail</a></p>
+			<!-- <p><a href="Eng_Resume.pdf">Resume</a> | <a href="mailto:justina.eng@gmail.com">E-mail</a></p> -->
 		</header>
+	<body>
+		<div id="sideNav">
+			<ul id="main-nav">
+				<li>
+					<a href="index.html">R&eacutesum&eacute</a> 
+				</li>
+				<li> 
+					<a href="index.html">UI &amp; UX Design</a>
+				</li>
+				<li>
+					<a href="index.html">Sketches/Illustrations</a>
+				</li> 
+			</ul>
+		</div>
+	</body>
+
+<!-- Social media icons 
+	<footer>
+		<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" title="LinkedIN profile">LinkedIN profile</a>
+		<a href="http://googleplus.com" title="Googleplus account">Google+ Account</a>
+		<a href="http://yelp.com" title="Yelp Profile">Yelp</a>
+	</footer> --> 
 </html>
