--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	</head>
 
-		<header> <h1>Justina Eng</h1> 
+		<header> 
 			<!-- <p><a href="Eng_Resume.pdf">Resume</a> | <a href="mailto:justina.eng@gmail.com">E-mail</a></p> -->
 		</header>
 	<body>
 		<div id="sideNav">
+			<h1 id="name-logo">Justina Eng</h1> 
 			<ul id="main-nav">
 				<li>
 					<a href="index.html">R&eacutesum&eacute</a> 
@@ -24,6 +25,29 @@
 					<a href="index.html">Sketches/Illustrations</a>
 				</li> 
 			</ul>
+		</div>
+
+		<div id="resume-block">
+			<h3>Education</h3>
+			<p>Carnegie Mellon University
+				<br>B.S. Technical Writing</br>
+				<i>Minors in Human-Computer Interaction &amp; Fine Arts</i>
+			</p>
+			<h3>Experience</h3>
+			<p>August 2014 - Present  |  Communications &amp; Marketing Specialist
+				<br><i>Yale Information Technology Services</i></br>
+				<ul>
+					<li>
+						<p>Created posters, flyers, and promotional materials.</p>
+					</li>
+					<li>
+						<p>Documented marketing process and costs.</p>
+					</li>
+					<li>
+						<p>Edited and created articles about Yale’s technologies, staff, services, and technology trends.</p>
+					</li>
+				</ul>
+			</p>
 		</div>
 	</body>
 
