updated and condensed files

--- a/index.html
+++ b/index.html
@@ -16,45 +16,49 @@
 			<h1 id="name-logo">Justina Eng</h1> 
 			<ul id="main-nav">
 				<li>
-					<a href="index.html">R&eacutesum&eacute</a> 
+					<a href="index.html">About Me</a> 
 				</li>
 				<li> 
-					<a href="index.html">UI &amp; UX Design</a>
+					<a href="Eng_Resume.pdf">Download R&eacutesum&eacute</a>
 				</li>
-				<li>
-					<a href="index.html">Sketches/Illustrations</a>
-				</li> 
 			</ul>
 		</div>
-
+		
 		<div id="resume-block">
-			<h3>Education</h3>
+
+		<h1> Hello! </h1>
+		<p> I graduated from Carnegie Mellon in May 2014 and I now work for Yale's User Experience and Web Services Team. My amazing team helps migrate old sites to newer CMS platforms and provides excellent consultative services to their clients. As the UX and UI designer, I help design the layouts of our client's websites to match their mission and their user's needs. In my spare time, I enjoy learning more about various programming languages and better user research methods. 
+		<br></br><i>Site is currently under construction, but feel free to add me on LinkedIN or reach me through e-mail! </i> </p>
+
+			<!-- <h3>Education</h3>
 			<p>Carnegie Mellon University
 				<br>B.S. Technical Writing</br>
 				<i>Minors in Human-Computer Interaction &amp; Fine Arts</i>
 			</p>
+
 			<h3>Experience</h3>
-			<p>August 2014 - Present  |  Communications &amp; Marketing Specialist
-				<br><i>Yale Information Technology Services</i></br>
-				<ul>
-					<li>
-						<p>Created posters, flyers, and promotional materials.</p>
-					</li>
-					<li>
-						<p>Documented marketing process and costs.</p>
-					</li>
-					<li>
-						<p>Edited and created articles about Yale’s technologies, staff, services, and technology trends.</p>
-					</li>
-				</ul>
-			</p>
+			<p>UI &amp; UX Designer  | February 2015 - Present 
+				<br><i>Yale Information Technology Services, Campus Community Technologies</i></br>
+					As part of the user experience and web services team, I help migrate Yale sites to new CMS platforms and offer design services for clients. 
+
+			<br></br>Communications &amp; Marketing Specialist  |  August 2014 - January 2015 
+				<br><i>Yale Information Technology Services, Office of the CIO</i></br>
+					Created posters, flyers, and promotional materials for various events in ITS. Documented all marketing processes and costs. Edited and created articles about company technologies, staff, services, and technology trends. Created and designed print and digital marketing and communications materials for the first Yale Technology Summit. 
+
+			<br></br>Research Assistant  |  January 2014 - May 2014 
+				<br><i>Human-Computer Interaction Institute at Carnegie Mellon University</i></br>
+						Learned and implemented behavioral research methods, studied decision science literature, and gained experience with user interface design and usability research.
+
+			<br></br>Teaching Assistant  |  August 2012 - May 2014
+				<br><i>Computing at Carnegie Mellon</i></br>
+						Held weekly recitations to teach new students fundamental computing skills and familiarized them with the university's academic technologies and applications.</p>
+						-->
+		<br></br>
+		<a href="https://www.linkedin.com/pub/justina-eng/30/2a2/903/en"><img src="images/linkedin.png"></a>
+		<a href="mailto:justina.eng@gmail.com"><img src="images/gmail.png"></a>
+		<a href="https://twitter.com/jerzztina"><img src="images/twitter.png"></a>
 		</div>
 	</body>
-
-<!-- Social media icons 
 	<footer>
-		<a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile" title="LinkedIN profile">LinkedIN profile</a>
-		<a href="http://googleplus.com" title="Googleplus account">Google+ Account</a>
-		<a href="http://yelp.com" title="Yelp Profile">Yelp</a>
-	</footer> --> 
+	</footer> 
 </html>
