--- a/index.html
+++ b/index.html
@@ -1,36 +1,126 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Justina Eng's Portfolio</title>
 
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link href='http://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet' type='text/css'> 
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-	</head>
 
-		<header> 
-			<!-- <p><a href="Eng_Resume.pdf">Resume</a> | <a href="mailto:justina.eng@gmail.com">E-mail</a></p> -->
-		</header>
-	<body>
-		<div id="sideNav">
-			<h1 id="name-logo">Justina Eng</h1> 
-			<ul id="main-nav">
-				<li>
-					<a href="index.html">About Me</a> 
-				</li>
-				<li> 
-					<a href="Eng_Resume.pdf">Download R&eacutesum&eacute</a>
-				</li>
+<head>
+
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	
+	<title>Justina Eng's Portfolio</title>
+	<meta name="Portfolio" content="">
+	<meta name="Justina Eng" content="">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+
+	<link rel="stylesheet" href="css/style.css">
+	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	
+	<script src="js/bootstrap.min.js"></script>
+
+	<script src="js/isotope.pkgd.min.js"></script>
+	
+	<script src="js/main.js"></script>
+
+
+	<link href='http://fonts.googleapis.com/css?family=Philosopher:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Muli:300,400,300italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
+
+</head>
+
+<body>
+
+<div id="intro">
+<h1 id="title">xyz site</h1>
+<p>Interaction & Graphic Designer // Freelance Illustrator</p>
+</div>
+
+<nav class="navbar navbar-default" role="navigation">
+	<div class="container group">
+			<ul class="nav navbar-nav navbar-left" id="controls">
+				<li><a href="#cat1">UX Projects</a></li>
+				<li><a href="#cat2">Design and Art</a></li>
+				<li><a href="#cat3">CMU Work</a></li>
 			</ul>
-		</div>
-		
-		<div id="resume-block">
+	</div>
+</nav>
+
+<section id="main" class="container">
+	<div class="box cat1 cat2">
+	UX and art - COPD medical illustrations?
+	</div>
+	
+	<div class="box cat3">
+	CMU project: something HCI/Interaction Design blah blah
+	</div>
+			
+	<div class="box cat1">
+	UX Project (OISS at Yale idk)
+	</div>	
+
+	<div class="box cat2">
+	RISD studies? CMU Fine Arts sketchbook?
+	</div>
+
+	<div class="box cat2 cat3">
+	CMU screenprinting class
+	</div>
+
+	<div class="box cat2">
+	Design-- Yale communications posters (fckin tech summit shit)
+	</div>
+
+	<div class="box cat1 cat3">
+	UX and CMU; app design class, interaction design 
+	</div>
+
+	<div class="box cat3">
+	some other CMU project I did (women in IT I guess?)
+	</div>
+
+
+	<div class="box cat2 cat3">
+	booth mothafucka
+	</div>
+
+	<div class="box cat2">
+	more artwork I don't have...lol; freelance?
+	</div>
+
+	<div class="box cat3">
+	CMU collaborative project 
+	</div>
+
+	<div class="box cat1">
+	UX project
+	</div>
+
+	<div class="box cat2 cat1">
+	art and UX...HMMMMM
+	</div>
+
+	<div class="box cat1">
+	some kind of UX project also why does this keep breaking every time I try 
+	</div>
+
+</section>
+
+</body>
+</html>
+
+
+
+		<!--<div id="resume-block">
 
 		<h1> Hello! </h1>
 		<p> I graduated from Carnegie Mellon in May 2014 and I now work for Yale's User Experience and Web Services Team. My amazing team helps migrate old sites to newer CMS platforms and provides excellent consultative services to their clients. As the UX and UI designer, I help design the layouts of our client's websites to match their mission and their user's needs. In my spare time, I enjoy learning more about various programming languages and better user research methods. 
 		<br></br><i>Site is currently under construction, but feel free to add me on LinkedIN or reach me through e-mail! </i> </p>
 
-			<!-- <h3>Education</h3>
+			 <h3>Education</h3>
 			<p>Carnegie Mellon University
 				<br>B.S. Technical Writing</br>
 				<i>Minors in Human-Computer Interaction &amp; Fine Arts</i>
@@ -52,7 +142,7 @@
 			<br></br>Teaching Assistant  |  August 2012 - May 2014
 				<br><i>Computing at Carnegie Mellon</i></br>
 						Held weekly recitations to teach new students fundamental computing skills and familiarized them with the university's academic technologies and applications.</p>
-						-->
+						
 		<br></br>
 		<a href="https://www.linkedin.com/pub/justina-eng/30/2a2/903/en"><img src="images/linkedin.png"></a>
 		<a href="mailto:justina.eng@gmail.com"><img src="images/gmail.png"></a>
@@ -60,5 +150,4 @@
 		</div>
 	</body>
 	<footer>
-	</footer> 
-</html>
+	</footer> -->
