--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <body>
 
 <div id="intro">
-<h1 id="title">xyz site</h1>
-<p>Interaction & Graphic Designer // Freelance Illustrator</p>
+<h1 id="title">Justina Eng</h1>
+<p>User Experience Designer // Carnegie Mellon '14 Alum</p>
 </div>
 
 <nav class="navbar navbar-default" role="navigation">
@@ -44,14 +44,14 @@
 			<ul class="nav navbar-nav navbar-left" id="controls">
 				<li><a href="#cat1">UX Projects</a></li>
 				<li><a href="#cat2">Design and Art</a></li>
-				<li><a href="#cat3">CMU Work</a></li>
+				<li><a href="#cat3">Student Work</a></li>
 			</ul>
 	</div>
 </nav>
 
 <section id="main" class="container">
 	<div class="box cat1 cat2">
-	UX and art - COPD medical illustrations?
+	UX Report and consultation
 	</div>
 	
 	<div class="box cat3">
@@ -79,20 +79,20 @@
 	</div>
 
 	<div class="box cat3">
-	some other CMU project I did (women in IT I guess?)
+	Icon Designs
 	</div>
 
 
 	<div class="box cat2 cat3">
-	booth mothafucka
+	Spring Carnival Booth 
 	</div>
 
 	<div class="box cat2">
-	more artwork I don't have...lol; freelance?
+	Women in IT Site Design 
 	</div>
 
 	<div class="box cat3">
-	CMU collaborative project 
+	CMU Human-Centered Design
 	</div>
 
 	<div class="box cat1">
