--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 <p>User Experience Designer // Carnegie Mellon '14 Alum</p>
 </div>
 
+<div id="temp-intro">
+<p> Hello! Currently, I work at Yale's Information Technology Services as a user experience designer. Our web group offers usability consultations on different Yale sites and applications, in addition to custom site builds and migration. I currently lead the user research initiative and offer usability testing to various groups across campus. I also generate usability reports and work with the community to improve Yale's web presence. My site is a working progress, but you can <a href="mailto:justina.eng@yale.edu">e-mail</a> me or find me on <a href="https://www.linkedin.com/pub/justina-eng/30/2a2/903">LinkedIN</a> for a portfolio of my work.</p>
+</div>
+
+<!-- work in progress
 <nav class="navbar navbar-default" role="navigation">
 	<div class="container group">
 			<ul class="nav navbar-nav navbar-left" id="controls">
@@ -71,7 +76,7 @@
 	</div>
 
 	<div class="box cat2">
-	Design-- Yale communications posters (fckin tech summit shit)
+	Design-- Yale communications posters 
 	</div>
 
 	<div class="box cat1 cat3">
@@ -114,7 +119,7 @@
 
 
 
-		<!--<div id="resume-block">
+		<div id="resume-block">
 
 		<h1> Hello! </h1>
 		<p> I graduated from Carnegie Mellon in May 2014 and I now work for Yale's User Experience and Web Services Team. My amazing team helps migrate old sites to newer CMS platforms and provides excellent consultative services to their clients. As the UX and UI designer, I help design the layouts of our client's websites to match their mission and their user's needs. In my spare time, I enjoy learning more about various programming languages and better user research methods. 
