--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </div>
 
 <div id="temp-intro">
-<p> Hello! Currently, I work at Yale's Information Technology Services as a user experience designer. Our web group offers usability consultations on different Yale sites and applications, in addition to custom site builds and migration. I currently lead the user research initiative and offer usability testing to various groups across campus. I also generate usability reports and work with the community to improve Yale's web presence. My site is a working progress, but you can <a href="mailto:justina.eng@yale.edu">e-mail</a> me or find me on <a href="https://www.linkedin.com/pub/justina-eng/30/2a2/903">LinkedIN</a> for a portfolio of my work.</p>
+<p> Hello! Currently, I work at Fidelity Investments as a User Experience Researcher. My site is a working progress, so feel free to<a href="mailto:justina.eng@fmr.com">e-mail</a> or find me on <a href="https://www.linkedin.com/pub/justina-eng/30/2a2/903">LinkedIN</a> for a portfolio of my work.</p>
 </div>
 
 <!-- work in progress
