--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </div>
 
 <div id="temp-intro">
-<p> Hello! Currently, I work at Fidelity Investments as a User Experience Researcher. My site is a working progress, so feel free to<a href="mailto:justina.eng@fmr.com">e-mail</a> or find me on <a href="https://www.linkedin.com/pub/justina-eng/30/2a2/903">LinkedIN</a> for a portfolio of my work.</p>
+<p> Hello! I work at Fidelity Investments as a User Experience Researcher. My site is a working progress, so feel free to <a href="mailto:justina.eng@fmr.com">e-mail</a> or find me on <a href="https://www.linkedin.com/pub/justina-eng/30/2a2/903">LinkedIN</a> for a portfolio of my work.</p>
 </div>
 
 <!-- work in progress
